--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,50 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Global Teams test task</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <main class="main">
+      <div class="main__content">
+        <div class="main__header">
+          <div class="logo">
+            <img
+              class="logo__img"
+              src="/images/logo.png"
+              alt="logo"
+            >
+          </div>
+          <div class="main__intro intro">
+            <h1 class="intro__title">TOP 5 Real Money Online Casico Bonus List!</h1>
+            <p class="intro__disc">
+              Play online for real money at trusted online casinos in Europe. Claim your exclusive bonus and strt playing slots today!
+            </p>
+            <h2 class="intro__bonus">10,302 Claimed Bonuses And Counting!</h2>
+          </div>
+        </div>
+
+        <div class="casinos">
+          <div class="casinos__titles">
+            <p class="casinos__title casinos__title--1">casino</p>
+            <p class="casinos__title casinos__title--2">welcome bonus</p>
+            <p class="casinos__title casinos__title--3">user rating</p>
+            <p class="casinos__title casinos__title--4">rating</p>
+            <p class="casinos__title casinos__title--5">play now</p>
+          </div>
+
+          <ul class="casinos__list"></ul>
+        </div>
+      </div>
+    </main>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
+
+    <script type="module" src="scripts/main.js"></script>
   </body>
 </html>
